--- a/craft_sicherungWebsite/templates/_layouts/weiterleitungmitzeilenumbruch.html
+++ b/craft_sicherungWebsite/templates/_layouts/weiterleitungmitzeilenumbruch.html
@@ -1,5 +1,5 @@
 
-<div class="zwoelferspaltenlayout container text-left" style="background-color: #f8f5f2; padding-top: 0px; margin-bottom: 2.5rem;">
+<div class="zwoelferspaltenlayout container text-left" style="background-color: white; padding-top: 0px; margin-bottom: 2.5rem;">
 <div class="row">
   <div class="col-md-4" style="padding: 0;">
     <a href="{{ entry.reinertext }}">
