--- a/craft_sicherungWebsite/templates/projekte/themen.html
+++ b/craft_sicherungWebsite/templates/projekte/themen.html
@@ -209,7 +209,7 @@
 
 <div class="container-fluid" style="background-color: #ffffff; padding: 5rem 0;">
 
-  <div class="container achterspaltenlayout" id="info" style="padding-bottom: 0px;">
+  <div class="container achterspaltenlayout" id="info" style="padding-bottom: 0px; overflow-wrap: break-word;">
     <h4 style="margin-bottom: 0;"> Quellen: </h4>
     <sup>1</sup> &nbsp; UNICEF, „The State of the World’s Children 2015: Reimagine the Future“, http://sowc2015.unicef.org, Under-5 mortality rate (2013) S. 31, New York 2015. <br>
     <sup>2</sup> &nbsp; UNICEF, „The State of the World’s Children 2010“, http://www.unicef.org/rightsite/sowc/ <br>
