--- a/craft_sicherungWebsite/templates/_layouts/footer.html
+++ b/craft_sicherungWebsite/templates/_layouts/footer.html
@@ -2,14 +2,19 @@
 
 <div class="container" id="footer">
   <div class="row">
-    <div class="col-lg-8 col-md-0">  </div>
+    <div class="col-lg-8 col-md-0" id="grueneBox">  </div>
     <div class="col-lg-4 col-md-11" style="color: white;">
-      <a href="https://www.mein-regenwald.de" class="btn btn-success">Der Chance-Regenwald <br> <strong>www.mein-regenwald.de</strong></a>
+      <a href="https://www.mein-regenwald.de" class="btn btn-success"> <span id="copy" style="color: white;">Der Chance-Regenwald </span><br> <strong>www.mein-regenwald.de</strong></a>
     </div>
   </div>
 </div>
 
   <style>
+@media (max-width: 768px) {
+  #grueneBox {
+    display: none;
+    }
+  }
   #footer .btn-success {
     background-image: linear-gradient(to right, #678a45 , #9eac50);
     text-align: left;
@@ -67,7 +72,6 @@
   #footerDesktop h4 {
     color: #d7d7d7;
   }
-
   #footerHandy a { /* Die Links im Footer weiß einfärben */
       color: #d7d7d7;
   }
@@ -173,7 +177,7 @@
 
               <hr style="margin: 1rem 0">
 
-              <div class="row" id="info" style="padding-bottom: 20px;">
+              <div class="row" id="copy" style="padding-bottom: 20px; color: #d7d7d7;">
 
                         {{ entry.zusatzfeld1}}
                         <div class="col-sm-12" style="padding-top: 2rem;"> <a target="_blank" href="https://www.facebook.com/chanceinternational/"> <img class="img-fluid float-right" style="height: 25px; padding-bottom: 0;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().url }} {% endif %}"> </a> </div>
