--- a/craft_sicherungWebsite/templates/_layouts/layoutHome.html
+++ b/craft_sicherungWebsite/templates/_layouts/layoutHome.html
@@ -7,22 +7,22 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
 
-  <link href="https://www.aufbau-website.de/craft/web/CSSundJS/stylevorgaben2.css" rel="stylesheet" />
+  <!-- <link href="https://www.aufbau-website.de/craft/web/CSSundJS/stylevorgaben2.css" rel="stylesheet" /> -->
   <link href="https://aufbau-website.de/craft/web/CSSundJS/stylevorgaben2.css" rel="stylesheet" />
 
 {% block headerZusatz %} {% endblock %}
 
-  <link href="https://www.aufbau-website.de/craft/web/CSSundJS/navbarCSS.css" rel="stylesheet" />
+  <!-- <link href="https://www.aufbau-website.de/craft/web/CSSundJS/navbarCSS.css" rel="stylesheet" /> -->
   <link href="https://aufbau-website.de/craft/web/CSSundJS/navbarCSS.css" rel="stylesheet" />
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-  <script src="https://www.maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+  <!-- <script src="https://www.maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script> -->
 
   <script src="https://aufbau-website.de/craft/web/CSSundJS/javascript.js"> </script>
-  <script src="https://www.aufbau-website.de/craft/web/CSSundJS/javascript.js"> </script>
+  <!-- <script src="https://www.aufbau-website.de/craft/web/CSSundJS/javascript.js"> </script> -->
 
 </head>
 
@@ -47,4 +47,4 @@
 {% include "_layouts/footer" %}
 
   </body>
-  </html>
+</html>
