--- a/craft_sicherungWebsite/templates/fuerSie/freiwillig/erfahrungsberichte.html
+++ b/craft_sicherungWebsite/templates/fuerSie/freiwillig/erfahrungsberichte.html
@@ -8,6 +8,7 @@
 
 {% block block1 %}
 
+
 <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 7rem; position: relative;">
 
   <nav aria-label="breadcrumb" id="info">
@@ -41,7 +42,7 @@
           src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
             </a>
         </div>
-          <div class="card-body" style="padding-top: 3rem;">
+          <div class="card-body">
             <p class="card-text">
               <h3> {{ entry.title }} </h3>
               <div id="copy"> {{ entry.anleser }}
@@ -68,5 +69,16 @@
 
   </div>
 
-
+  <style media="screen">
+  @media (max-width: 978px) {
+    .card-body {
+      padding-top: 6rem;
+    }
+  }
+  @media (min-width: 978px) {
+    .card-body {
+      padding-top: 4rem;
+    }
+  }
+  </style>
 {% endblock %}
