--- a/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
+++ b/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
@@ -178,7 +178,7 @@
 </div>
 
 <div class="container zwoelferspaltenlayout" style="padding-top: 0; padding-bottom: 5rem;">
-  <a target="_blank" href="https://meinregenwald.de/">
+  <a target="_blank" href="https://mein-regenwald.de/">
   <img class="img-fluid "src="{% if entry.bild.one() is not null %}{{ entry.bild.one().url }} {% endif %}">
   </a>
 </div>
