--- a/craft_sicherungWebsite/templates/spenden/patewerden.html
+++ b/craft_sicherungWebsite/templates/spenden/patewerden.html
@@ -1,4 +1,3 @@
-
 {% extends "_layouts/layoutHome.html" %}
 
 {% block titelfuerseo %}
@@ -27,10 +26,10 @@
   </div>
 </div>
 
-<div class="container-fluid no-padding" style="background-image: url({{ entry.bild.one().url }}); padding-bottom: 5rem; padding-top: 5rem; background-repeat: no-repeat; background-color: #f8f5f2;">
-  <div class="container" style="max-width: 1280px;">
+<div class="container-fluid no-padding" style="background-image: url({{ entry.bild.one().url }}); padding-bottom: 5rem; padding-top: 0; background-repeat: no-repeat; background-color: #f8f5f2; background-size: cover;">
+  <div class="container zwoelferspaltenlayout">
     <div class="row">
-      <div class="col-md-2">
+      <div class="col-lg-2" id="navigationstabs">
         <ul class="nav nav-pills flex-column" id="pills-tab" role="tablist">
           <li class="nav-item">
             <a class="nav-link active tab land" style="padding: 1rem;" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Länderpate</a>
@@ -41,23 +40,23 @@
           <li class="nav-item">
             <a class="nav-link tab kind" style="padding: 1rem;" id="pills-profile-tab" data-toggle="pill" href="#pills-profile2" role="tab" aria-controls="pills-profile" aria-selected="false">Kinderpate plus</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" style="margin-bottom: 3rem;">
             <a class="nav-link tab wald" style="padding: 1rem;" id="pills-profile-tab" data-toggle="pill" href="#pills-profile3" role="tab" aria-controls="pills-profile" aria-selected="false">Waldpate</a>
           </li>
         </ul>
       </div>
 
-      <div class="col-md-10" style="background-color: white; padding-right: 0; padding-left: 0;"> <!--Spaltenlayout, um die jetzt-spenden spalte mit 4 spalten dann zu integrieren -->
+      <div class="col-lg-10" style="background-color: white; padding-right: 0; padding-left: 0;"> <!--Spaltenlayout, um die jetzt-spenden spalte mit 4 spalten dann zu integrieren -->
           <div class="tab-content" id="pills-tabContent"> <!-- tab-content fuer alle Pills -->
 
-            <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+            <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" style="padding: 0 15px;">
               {% set entry = craft.entries.section('spenden').slug('partnerland').one() %}
               <div class="row">
                 <div class="col-md-9" style="padding: 2rem 3rem;">
                   <h2 style="padding-bottom: 0; margin-bottom: 0;"> {{ entry.title }} </h2>
                   <div id="copy"> {{ entry.text }}  </div>
                 </div>
-                  <div class="col-md-3" style="background-color: white; padding-top: 3rem;"> <!-- der Spendenaufruf in eigener Spalte -->
+                  <div class="col-md-3" style="background-color: white; padding: 2rem 3rem;"> <!-- der Spendenaufruf in eigener Spalte -->
                     <span id="copy"> <strong> Werden Sie: </strong> </span>
                     <div class="row">
                       <div class="col-12">
@@ -70,9 +69,11 @@
                     <div id="info" style="padding-top: 10%"> {{ entry.zusatzfeld2 }}</div>
                   </div>
                 </div>
+                <div class="row"> <!-- In eine row packen, da so der margin auf -15px gesetzt wird und das Bild bündig abschließt mit dem Container -->
                 <img class="img-fluid" src="  {% if entry.bild2.one() is not null %}  {{ entry.bild2.one().getUrl() }}  {% endif %}">
+              </div>
             </div>
-            <div class="tab-pane fade" id="pills-profile1" role="tabpanel" aria-labelledby="pills-profile-tab">
+            <div class="tab-pane fade" id="pills-profile1" role="tabpanel" aria-labelledby="pills-profile-tab" style="padding: 0 15px;">
               {% set entry = craft.entries.section('spenden').slug('partnerdorf').one() %}
               <div class="row">
                 <div class="col-md-9" style="padding: 2rem 3rem;">
@@ -80,7 +81,7 @@
                   <div id="copy"> {{ entry.anleser }}  </div>
                 </div>
                   {% set entry = craft.entries.section('spenden').slug('partnerland').one() %}
-                  <div class="col-md-3" style="background-color: white; padding-top: 3rem;"> <!-- der Spendenaufruf in eigener Spalte -->
+                  <div class="col-md-3" style="background-color: white; padding: 2rem 3rem;"> <!-- der Spendenaufruf in eigener Spalte -->
                     <span id="copy"> <strong> Werden Sie: </strong> </span>
                     <div class="row">
                       <div class="col-12">
@@ -94,16 +95,18 @@
                   </div>
               </div>
               {% set entry = craft.entries.section('spenden').slug('partnerdorf').one() %}
+              <div class="row"> <!-- In eine row packen, da so der margin auf -15px gesetzt wird und das Bild bündig abschließt mit dem Container -->
               <img class="img-fluid" src="  {% if entry.bild2.one() is not null %}  {{ entry.bild2.one().getUrl() }}  {% endif %}">
             </div>
+            </div>
             {% set entry = craft.entries.section('spenden').slug('partnerkind').one() %}
-            <div class="tab-pane fade" id="pills-profile2" role="tabpanel" aria-labelledby="pills-profile-tab">
+            <div class="tab-pane fade" id="pills-profile2" role="tabpanel" aria-labelledby="pills-profile-tab" style="padding: 0 15px;">
               <div class="row">
                 <div class="col-md-9" style="padding: 2rem 3rem;">
                   <h2 style="padding-bottom: 0; margin-bottom: 0;"> {{ entry.title }} </h2>
                   <div id="copy"> {{ entry.anleser }}  </div>
                 </div>
-                  <div class="col-md-3" style="background-color: white; padding-top: 3rem;"> <!-- der Spendenaufruf in eigener Spalte -->
+                  <div class="col-md-3" style="background-color: white; padding: 2rem 3rem;"> <!-- der Spendenaufruf in eigener Spalte -->
                     {% set entry = craft.entries.section('spenden').slug('partnerland').one() %}
                     <span id="copy"> <strong> Werden Sie: </strong> </span>
                     <div class="row">
@@ -118,16 +121,18 @@
                   </div>
                   {% set entry = craft.entries.section('spenden').slug('partnerkind').one() %}
               </div>
+              <div class="row"> <!-- In eine row packen, da so der margin auf -15px gesetzt wird und das Bild bündig abschließt mit dem Container -->
               <img class="img-fluid" src="{% if entry.bild2.one() is not null %}  {{ entry.bild2.one().getUrl() }}  {% endif %}">
             </div>
+            </div>
             {% set entry = craft.entries.section('spenden').slug('partnerwald').one() %}
-            <div class="tab-pane fade" id="pills-profile3" role="tabpanel" aria-labelledby="pills-profile-tab">
+            <div class="tab-pane fade" id="pills-profile3" role="tabpanel" aria-labelledby="pills-profile-tab" style="padding: 0 15px;">
               <div class="row">
                 <div class="col-md-9" style="padding: 2rem 3rem;">
                   <h2 style="padding-bottom: 0; margin-bottom: 0;"> {{ entry.title }} </h2>
                   <div id="copy"> {{ entry.anleser }}  </div>
                 </div>
-                  <div class="col-md-3" style="background-color: white; padding-top: 3rem;"> <!-- der Spendenaufruf in eigener Spalte -->
+                  <div class="col-md-3" style="background-color: white; padding: 2rem 3rem;"> <!-- der Spendenaufruf in eigener Spalte -->
                     {% set entry = craft.entries.section('spenden').slug('partnerland').one() %}
                     <span id="copy"> <strong> Werden Sie: </strong> </span>
                     <div class="row">
@@ -139,7 +144,9 @@
                   </div>
                   {% set entry = craft.entries.section('spenden').slug('partnerwald').one() %}
               </div>
-              <img class="img-fluid" src="  {% if entry.bild2.one() is not null %}  {{ entry.bild2.one().getUrl() }}  {% endif %}">
+              <div class="row"> <!-- In eine row packen, da so der margin auf -15px gesetzt wird und das Bild bündig abschließt mit dem Container -->
+                <img class="img-fluid" src="  {% if entry.bild2.one() is not null %}  {{ entry.bild2.one().getUrl() }}  {% endif %}">
+              </div>
             </div>
           </div> <!-- Die Tabs mit den verschiedenen Auswirkungen der Spenden, wechselbar durch klicken -->
       </div>
@@ -148,9 +155,32 @@
 </div>
 
 <style media="screen">
-  .img-fluid {
-    padding-bottom: 0;
+.img-fluid {
+  padding-bottom: 0;
+}
+.nav-link.active.tab {
+  font-weight: normal;
+}
+
+@media (max-width: 992px) {
+  .nav.nav-pills.flex-column .nav-item {
+    width: 50%;
   }
+  #pills-tab { /*Dass die Navigationstabs auch schön nebeneinander angezeigt werden und nicht mehr übereinander*/
+    flex-direction: row !important;
+  }
+  #navigationstabs {
+    padding: 0;
+  }
+}
+
+@media all and (max-width: 600px) { /*Damit mehr von dem orangenen Hintergrund zu sehen ist */
+
+  .zwoelferspaltenlayout {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
 </style>
 
 <script type="text/javascript">
@@ -159,7 +189,7 @@ if (url.includes('#')) {
     url = url.replace("https://aufbau-website.de/craft/web/spenden/patewerden.html#", "");
     url = '.' + url;
     $('.nav-link.tab').removeClass('active');
-    $(url).addClass('active');  
+    $(url).addClass('active');
   }
 </script>
 
