--- a/craft_sicherungWebsite/templates/ueberUns/konzept.html
+++ b/craft_sicherungWebsite/templates/ueberUns/konzept.html
@@ -50,7 +50,7 @@
 
       <div class="col-sm-1"></div>
       <div class="col-sm-2">
-        <img class="img-fluid rounded-circle mx-auto d-block" id="konzeptIcons" src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" style="padding-bottom: 0; margin-bottom: 1rem;">
+        <img class="img-fluid rounded-circle" id="konzeptIcons" src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" style="padding-bottom: 0; margin-bottom: 1rem;">
       </div>
       <div class="col-sm-1"></div>
       <div class="col-sm-8" style="padding-bottom: 2rem;">
