jens vorschläge einarbeiten

--- a/craft_sicherungWebsite/templates/_layouts/codeschnipsel/ajaxStartseite.html
+++ b/craft_sicherungWebsite/templates/_layouts/codeschnipsel/ajaxStartseite.html
@@ -30,7 +30,7 @@ var eintraege = [];
   eintraege.push(eintrag);
 {% endfor %}
 
-eintraege = shuffle(eintraege);
+//eintraege = shuffle(eintraege);
 
 function mehrLadenAjax() {
 
