--- a/craft_sicherungWebsite/templates/_layouts/codeschnipsel/spendekontaktundhome.html
+++ b/craft_sicherungWebsite/templates/_layouts/codeschnipsel/spendekontaktundhome.html
@@ -12,7 +12,7 @@
       <h3 style="color: white;">Geben Sie Menschen eine Chance!</h3>
       <div> Egal ob Sie uns regelmäßig oder einmalig unterstützen – bei einem Verwaltungskostenanteil von max. acht Prozent kommen Ihre Spenden bei den Menschen an.  </div>
       <hr style="border-width: 1px; margin-top: 1rem; margin-bottom: 1rem; border-color: white;">
-      <div style="padding-bottom: 1rem;"> Mit einer monatlichen Spende von </div>
+      <div style="padding-bottom: 1rem;"> Mit einer monatlichen Spende von... </div>
       <ul class="nav nav-pills" id="pills-tab" role="tablist">
         <li class="nav-item">
           <a class="nav-link active tab" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">5 Euro</a>
