--- a/craft_sicherungWebsite/templates/kontakt/index.html
+++ b/craft_sicherungWebsite/templates/kontakt/index.html
@@ -107,6 +107,9 @@
 </div>
 
 <div class="col-sm-12">
+
+  <h3 style="padding: 1rem 0;"> Achtung, sind Sie mit beidem einverstanden? </h3>
+
   <div class="custom-control custom-checkbox">
     <input type="checkbox" required class="custom-control-input" id="customCheck13">
     <label class="custom-control-label" for="customCheck13"> {{ entry.text }}</label>
