--- a/craft_sicherungWebsite/templates/ueberUns/empfehlungen.html
+++ b/craft_sicherungWebsite/templates/ueberUns/empfehlungen.html
@@ -22,7 +22,7 @@
 <div class="container achterspaltenlayout" style="position: relative;">
     <h1 style="padding-bottom: 30px;"> Erfahren Sie, was Partner und Freunde über unsere Arbeit sagen
     </h1>
-    <p id="anleser"> Chance e.V. wird von ganz unterschiedlichen Kirchen und anderen Einrichtungen in ganz Deutschland begleitet, unterstützt und empfohlen. Hier
+    <p id="anleser"> Chance e.V. wird von unterschiedlichen Kirchen und anderen Einrichtungen in ganz Deutschland begleitet, unterstützt und empfohlen. Hier
       erzählen einige unserer Partner, was sie über unsere Arbeit denken.
     </p>
   </div>
