--- a/craft_sicherungWebsite/templates/ueberUns/index.html
+++ b/craft_sicherungWebsite/templates/ueberUns/index.html
@@ -28,7 +28,7 @@
   <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; width: 40%; left: 0px;">
 
   <div class="container achterspaltenlayout" style="position: relative; padding-bottom: 0;">
-    <h1 style="padding-bottom: 2rem;"> Für ein gelingendes, selbstbestimmtes Leben in Einklang mit der Schöpfung  </h1>
+    <h1 style="padding-bottom: 2rem;"> Für ein gelingendes, selbstbestimmtes Leben im Einklang mit der Schöpfung  </h1>
     <p id="anleser" style="padding-bottom: 0;"> Begleiten, bestärken, befähigen und bewahren – unser Ansatz zu einem selbstbestimmten und gelingendem Leben.
       Motiviert von der Liebe Gottes für Mensch und Natur.
     </p>
