--- a/craft_sicherungWebsite/templates/spenden/spende.html
+++ b/craft_sicherungWebsite/templates/spenden/spende.html
@@ -134,8 +134,8 @@
           <input type="text" name="plz" id="plz" class="form-control" required>
         </div>
         <div class="form-group">
-          <label for="usr">E-Mail-Adresse (freiwillig)</label>
-          <input type="email" name="email" id="email" class="form-control">
+          <label for="usr">E-Mail-Adresse</label>
+          <input type="email" name="email" id="email" class="form-control" required>
         </div>
       </div>
     </div>
